; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_task.c_global_update_logical_writes.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_task.c_global_update_logical_writes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@global_logical_writes_count = common dso_local global i64 0, align 8
@io_telemetry_limit = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @global_update_logical_writes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @global_update_logical_writes(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  br label %6

6:                                                ; preds = %19, %1
  %7 = load i64, i64* @global_logical_writes_count, align 8
  store i64 %7, i64* %3, align 8
  store i64 %7, i64* %4, align 8
  %8 = load i64, i64* %2, align 8
  %9 = load i64, i64* %4, align 8
  %10 = add nsw i64 %9, %8
  store i64 %10, i64* %4, align 8
  %11 = load i64, i64* %4, align 8
  %12 = load i64, i64* @io_telemetry_limit, align 8
  %13 = icmp sge i64 %11, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %6
  store i64 0, i64* %4, align 8
  %15 = load i32, i32* @TRUE, align 4
  store i32 %15, i32* %5, align 4
  br label %18

16:                                               ; preds = %6
  %17 = load i32, i32* @FALSE, align 4
  store i32 %17, i32* %5, align 4
  br label %18

18:                                               ; preds = %16, %14
  br label %19

19:                                               ; preds = %18
  %20 = load i64, i64* %3, align 8
  %21 = load i64, i64* %4, align 8
  %22 = call i32 @OSCompareAndSwap64(i64 %20, i64 %21, i64* @global_logical_writes_count)
  %23 = icmp ne i32 %22, 0
  %24 = xor i1 %23, true
  br i1 %24, label %6, label %25

25:                                               ; preds = %19
  %26 = load i32, i32* %5, align 4
  ret i32 %26
}

declare dso_local i32 @OSCompareAndSwap64(i64, i64, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
